fix the bug of align of the Action

--- a/src/index.css
+++ b/src/index.css
@@ -131,8 +131,14 @@ body {
 }
 
 .item-actions {
-  text-align: center;
+  display: flex;
   cursor: pointer;
+  font-size: 20px;
+  padding: 5px;
+  text-align: center;
+}
+.item-action-table {
+  padding-left: 30px;
 }
 
 .item-actions:hover {
@@ -143,16 +149,17 @@ body {
   position: absolute;
   top: 40px;
   right: 0;
-  background: var(--bg-color);
+  background-color: var(--card-bg-color);
   border: 1px solid var(--input-border-color);
   border-radius: 5px;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: var(--card-shadow);
   padding: 10px;
   z-index: 10;
 }
 
 .modal-button {
-  display: block;
+  display: flex;
+  align-items: center;
   width: 100%;
   padding: 10px;
   text-align: left;
@@ -161,14 +168,30 @@ body {
   cursor: pointer;
   font-size: 16px;
   color: var(--text-color);
+  gap: 8px;
 }
 
 .modal-button:hover {
-  background: #f5f5f5;
+  background: var(--button-hover-bg-color);
+  border-radius: 5px;
+}
+
+.modal-button svg {
+  font-size: 20px;
+}
+
+[data-theme="dark"] .modal {
+  background-color: var(--card-bg-color);
+  border-color: var(--input-border-color);
+  box-shadow: var(--card-shadow);
 }
 
 [data-theme="dark"] .modal-button {
   color: var(--text-color);
+}
+
+[data-theme="dark"] .modal-button:hover {
+  background-color: var(--button-hover-bg-color);
 }
 
 [data-theme="dark"] .item-row {
@@ -176,15 +199,6 @@ body {
   color: var(--text-color);
 }
 
-.item-actions {
-  align-self: center;
-  justify-self: center;
-  text-align: center;
-  cursor: pointer;
-  font-size: 20px;
-  padding: 5px;
-}
-
-.list-container {
-  margin-bottom: 1rem;
+[data-theme="dark"] .item-actions:hover {
+  color: #1e88e5;
 }
